// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements SolaceOperationBindingElement given timeToLive and priority fields of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(SolaceOperationBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ObjectElement)))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements SolaceOperationBindingElement given timeToLive and priority fields of type SchemaElement should refract to semantic ApiDOM tree 1`] = `
(SolaceOperationBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ObjectElement)))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (SchemaElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;

exports[`refractor elements SolaceOperationBindingElement should refract to semantic ApiDOM tree 1`] = `
(SolaceOperationBindingElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (ObjectElement)))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (NumberElement))
  (MemberElement
    (StringElement)
    (BooleanElement)))
`;
